Replace deprecated constructors from JDK
While at it, do some simplification and reduce code duplication.