@@ -929,7 +929,8 @@ public class EinleitungsstellePanel extends ObjectPanel {
 					}
 				}
 			};
-			this.verknuepfungLoeschAction.putValue(Action.MNEMONIC_KEY, new Integer(KeyEvent.VK_L));
+			this.verknuepfungLoeschAction.putValue(Action.MNEMONIC_KEY,
+                Integer.valueOf(KeyEvent.VK_L));
 			this.verknuepfungLoeschAction.putValue(Action.ACCELERATOR_KEY,
 					KeyStroke.getKeyStroke(KeyEvent.VK_DELETE, 0, false));
 		}
